bug: remove java 21 security restrictions